[tool.poetry]
name = "pytest-git-diff"
version = "0.1.0"
description = "Pytest plugin that allows the user to select the tests affected by selected git commits"
authors = ["sponja23 <tomas.spognardi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydeps = "^1.12.19"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.9.0"
pytest = ">=8.1.1"
pytest-cov = ">=4.1.0"
ruff = ">=0.3.2"
tomli = { version = ">=2.0.1", python = "<3.11" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["pydeps.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.package_test_cases.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.repo_test_cases.*"]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=pytest_git_diff --cov-report term-missing --no-cov-on-fail"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]

[tool.ruff]
line-length = 100
target-version = "py38"
fix = true
extend-exclude = ["tests/package_test_cases/*", "tests/repo_test_cases/*"]

[tool.ruff.lint]
select = ["E", "F", "UP", "I001", "T203"]
ignore = [
  # Recommended ignores by ruff when using formatter
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
